--- a/package.json
+++ b/package.json
@@ -7,27 +7,30 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
-    "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx --ignore-path .eslintignore",
+    "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix  --ignore-path .eslintignore",
     "format": "prettier --check .",
     "format:fix": "prettier --write .",
     "prepare": "husky",
     "lint-staged": "lint-staged"
   },
   "lint-staged": {
-    "*.js": "eslint --fix",
-    "*.jsx": "eslint --fix",
-    "*.ts": "eslint --fix",
-    "*.tsx": "eslint --fix",
+    "*.js": "eslint --fix  --ignore-path .eslintignore",
+    "*.jsx": "eslint --fix  --ignore-path .eslintignore",
+    "*.ts": "eslint --fix  --ignore-path .eslintignore",
+    "*.tsx": "eslint --fix  --ignore-path .eslintignore",
     "*.{js,jsx,ts,tsx}": "prettier --write"
   },
   "dependencies": {
     "@jest/globals": "^29.7.0",
+    "@react-native-async-storage/async-storage": "^2.1.1",
     "@reduxjs/toolkit": "^2.5.1",
     "react": "18.3.1",
     "react-native": "0.76.1",
     "react-native-device-info": "^14.0.0",
-    "react-redux": "^9.2.0"
+    "react-redux": "^9.2.0",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -36,27 +39,23 @@
     "@react-native-community/cli": "15.0.0",
     "@react-native-community/cli-platform-android": "15.0.0",
     "@react-native-community/cli-platform-ios": "15.0.0",
-    "@react-native-community/eslint-config": "^3.2.0",
     "@react-native/babel-preset": "0.76.1",
     "@react-native/eslint-config": "0.76.1",
     "@react-native/metro-config": "0.76.1",
     "@react-native/typescript-config": "0.76.1",
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
+    "@types/redux-logger": "^3.0.13",
     "@typescript-eslint/eslint-plugin": "^8.23.0",
     "@typescript-eslint/parser": "^8.23.0",
     "babel-jest": "^29.6.3",
     "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^8.57.1",
-    "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^10.0.1",
-    "eslint-import-resolver-alias": "^1.1.2",
+    "eslint-import-resolver-typescript": "^3.8.2",
     "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-jsx-a11y": "^6.10.2",
-    "eslint-plugin-prettier": "^5.2.3",
-    "eslint-plugin-react": "^7.37.4",
-    "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-react-native": "^5.0.0",
+    "eslint-plugin-jest": "^28.11.0",
+    "eslint-plugin-sonarjs": "^3.0.2",
     "husky": "^9.1.7",
     "jest": "^29.6.3",
     "lint-staged": "^15.4.3",
